fixed text fixed img on tablet

--- a/public/CSS/tablet.css
+++ b/public/CSS/tablet.css
@@ -169,8 +169,9 @@ p {
   }
 
   .discript_2_2 .discript_2_2_2 img {
-      width: 100%;
-      height: 100%;
+    height: auto;
+    width: 100%;
+    max-height: 100%;
   }
   .p_3,
   .p_4 {
